Mathjax 移至 blog

--- a/blog/2019-08-17-Mathjax.md
+++ b/blog/2019-08-17-Mathjax.md
@@ -1,14 +1,20 @@
 ---
-sidebar_position: 8
+author: Xtao_dada
+author_title: Nexmoe 贡献者
+author_url: https://github.com/xtaodada
+author_image_url: https://avatar.mixcm.com/github/xtaodada
+
 ---
 
 # 使用 Mathjax
 
+<!--more-->
+
+
+
 ## **使用 Kramed 代替 Marked**
 
 `hexo` 默认的渲染引擎是 `marked` ，但是 `marked` 不支持 `mathjax` 。 `kramed` 是在 `marked` 的基础上进行修改。我们在工程目录下执行以下命令来安装 `kramed` 。
-
-
 
 ```
 npm uninstall hexo-renderer-marked --save
@@ -16,8 +22,6 @@ npm install hexo-renderer-kramed --save
 ```
 
 然后，打开 `/node_modules/hexo-renderer-kramed/lib/renderer.js` ，更改：
-
-
 
 ```
 function formatText(text) {
@@ -27,8 +31,6 @@ function formatText(text) {
 ```
 
 为
-
-
 
 ```
 function formatText(text) {
@@ -40,8 +42,6 @@ function formatText(text) {
 
 如果之前安装过 `hexo-math` ,则先卸载 `hexo-math` 再安装 `mathjax`
 
-
-
 ```
 npm uninstall hexo-math --save
 npm install hexo-renderer-mathjax --save
@@ -51,15 +51,11 @@ npm install hexo-renderer-mathjax --save
 
 打开 `/node_modules/hexo-renderer-mathjax/mathjax.html` 修改
 
-
-
 ```
 <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 ```
 
 为
-
-
 
 ```
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
@@ -69,15 +65,11 @@ npm install hexo-renderer-mathjax --save
 
 因为 `hexo` 默认的转义规则会将一些字符进行转义，比如 `_` 转为 `<em>` , 所以我们需要对默认的规则进行修改。打开 `/node_modules/kramed/lib/rules/inline.js` ,修改 `inline` 变量中。
 
-
-
 ```
 escape: /^\\([\\`*{}\[\]()#$+\-.!_>])/,
 ```
 
 更改为:
-
-
 
 ```
 escape: /^\\([`*\[\]()## +\-.!_>])/,
@@ -85,15 +77,11 @@ escape: /^\\([`*\[\]()## +\-.!_>])/,
 
 把
 
-
-
 ```
 em: /^\b_((?:__|[\s\S])+?)_\b|^\*((?:\*\*|[\s\S])+?)\*(?!\*)/,
 ```
 
 更改为:
-
-
 
 ```
 em: /^\*((?:\*\*|[\s\S])+?)\*(?!\*)/,
@@ -103,8 +91,6 @@ em: /^\*((?:\*\*|[\s\S])+?)\*(?!\*)/,
 
 打开 `主题配置文件` ,增加以下字段：
 
-
-
 ```
 mathjax:
   enable: true
@@ -112,8 +98,6 @@ mathjax:
 ```
 
 在每次需要用的博文中，在文章的 `Front-matter` 里打开 `mathjax` 开关
-
-
 
 ```
 mathjax: true
