--- a/blog/2020-02-09-博客，我优化了什么？.md
+++ b/blog/2020-02-09-博客，我优化了什么？.md
@@ -6,9 +6,9 @@ author_url: https://github.com/nexmoe
 author_image_url: https://avatar.mixcm.com/github/nexmoe
 ---
 
-
-
 由于博客性能一直很弱鸡，所以花了两天时间优化了一下，以下，是我的优化成果。
+
+<!--more-->
 
 ## 先上跑分
 
